# IntelligentUAVChampionshipBase

./: .gitignore  README.md
basic_dev/: Dockerfile  README.md
basic_dev/src/Point-LIO/: CMakeLists.txt  package.xml
basic_dev/src/Point-LIO/config/: horizon.yaml  rmua.yaml
basic_dev/src/Point-LIO/launch/: mapping_rmua.launch
basic_dev/src/Point-LIO/rviz_cfg/: loam_livox.rviz
basic_dev/src/VINS-Fusion/config/: left.yaml  rmua.yaml  vins_rviz_config.rviz
basic_dev/src/VINS-Fusion/vins_estimator/launch/: rmua.launch
basic_dev/src/basic_dev/: CMakeLists.txt
basic_dev/src/basic_dev/include/: basic_dev.hpp
basic_dev/src/basic_dev/src/: basic_dev.cpp  hovering_example.cpp
basic_dev/src/imu_gps_odometry/config/: rmua.rviz
basic_dev/src/imu_gps_odometry/include/: imu_gps_odometry.hpp
basic_dev/src/imu_gps_odometry/scripts/: GPS_odom.py  sync_imu_lidar.py
basic_dev/src/imu_gps_odometry/src/: eskf.cpp  imu_gps_odometry.cpp
basic_dev/src/remote_control/: CMakeLists.txt  package.xml
basic_dev/src/remote_control/include/: teleop_twist_node.hpp
basic_dev/src/remote_control/src/: teleop_twist_node.cpp
basic_dev/src/rotors_control/: CMakeLists.txt  package.xml
basic_dev/src/rotors_control/include/rotors_control/: common.h  lee_position_controller.h  parameters.h
basic_dev/src/rotors_control/launch/: rmua_control_test.launch
basic_dev/src/rotors_control/resource/: drone_1.yaml  lee_controller_drone_1.yaml
basic_dev/src/rotors_control/src/: hovering_example.cpp
basic_dev/src/rotors_control/src/nodes/: lee_position_controller_node.cpp  (+1 more)
